Description
Little improvements/fixes for GetCPInfoExW and GetGeoInfoW:
- Rework GetLocalisedText helper such that it looks more like LoadStringW. Also, if the string is not found (either because there is no associated string table, or because its resource length is zero), then return zero. Otherwise we return the correct number of characters copied into the user buffer, not counting the NULL terminator. This fixes the blank strings showing in the list of codepage user-friendly names in the console properties dialog.
 - Simplify the code of NLS_GetGeoFriendlyName: we can directly use the user-provided buffer to retrieve the string.
Addendum to r65157.